# GarageManager-CPP

./: .gitignore  CMakeLists.txt  README.md
Projeto1/OficinaEDA/: Carro.cpp  Carro.h  ET.cpp  ET.h  Estruturas.cpp  Ficheiros.cpp  Ficheiros.h  Gestao.cpp  Gestao.h  LEspera.cpp  L_Espera.h  Mecanico.cpp  Mecanico.h  Oficina.cpp  Oficina.h  OficinaEDA.sln  OficinaEDA.vcxproj  OficinaEDA.vcxproj.filters  Testar.txt  main.cpp
Projeto1/OficinaEDA/x64/Debug/: OficinaEDA.exe.recipe  OficinaEDA.vcxproj.FileListAbsolute.txt
Projeto1/OficinaEDA/x64/Debug/OficinaEDA.tlog/: CopyFile.command.1.tlog  CopyFile.read.1.tlog  CopyFile.write.1.tlog  OficinaEDA.lastbuildstate
Projeto2/OficinaEDA/: 2fase.sln  2fase.vcxproj  2fase.vcxproj.filters  Arvore.cpp  Arvore.h  Carro.cpp  Carro.h  ET.cpp  ET.h  Gestao.cpp  Gestao.h  Main.cpp  Mecanico.cpp  Mecanico.h  Oficina.cpp  Oficina.h  ficheiros.cpp  ficheiros.h  oficina.txt
Projeto2/OficinaEDA/x64/Debug/: 2fase.exe.recipe  2fase.vcxproj.FileListAbsolute.txt
Projeto2/OficinaEDA/x64/Debug/2fase.tlog/: 2fase.lastbuildstate
data/: garage.txt
include/: Files.h  Garage.h  Manager.h  Mechanic.h  Tree.h  Vehicle.h  WorkStation.h
src/: Files.cpp  Garage.cpp  Manager.cpp  Mechanic.cpp  Tree.cpp  Vehicle.cpp  WorkStation.cpp  main.cpp
tests/: test_memory.cpp  test_runner.py  test_stress.cpp
